fix: Authentication 객체 생성시 빈 리스트 권한 주도록 수정 #5